<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="about_title">About</string>
    <string name="app_name">Uplifter</string>
    <string name="awesome">Awesome</string>
    <string name="copyright">Copyright 2014 Uplifter, Inc.</string>
    <string name="come_back_tomorrow">Come back tomorrow\u00A0\nfor more training\u00A0</string>
    <string name="go">Go!</string>
    <string name="happiness_tips_title">Happiness Tips</string>
    <string name="history_title">History</string>
    <string name="history_tooltip">History</string>
    <string name="log_any_time">You may log your mood at any time</string>
    <string name="log_your_mood_button">Log Your Mood</string>
    <string name="log_your_mood_title">Log Your Mood</string>
    <string name="mood_history_title">Mood History</string>
    <string name="mood_tooltip">Mood</string>
    <string name="mood1">Very Unhappy</string>
    <string name="mood2">Not So Great</string>
    <string name="mood3">So-So</string>
    <string name="mood4">Happy</string>
    <string name="mood5">Very Happy</string>
    <string name="negative">negative</string>
    <string name="neutral">neutral</string>
    <string name="onboarding_1_1">Practice Exercises\nProven to Increase\nHappiness</string>
    <string name="onboarding_1_2">Get 3 Questions Daily\nthat Will Remind You of\nAll the Good Things\nIn Your Life</string>
    <string name="onboarding_2_1">Train Your Brain to\nSee the Positive</string>
    <string name="onboarding_2_2_1">Express\u00A0</string>
    <string name="onboarding_2_2_2">Gratitude</string>
    <string name="onboarding_2_3_1">Enjoy\u00A0</string>
    <string name="onboarding_2_3_2">the Moment\u00A0</string>
    <string name="onboarding_2_4_1">Build\u00A0</string>
    <string name="onboarding_2_4_2">Compassion</string>
    <string name="onboarding_2_5">and more...</string>
    <string name="onboarding_3_1">Make Time for Positivity\nSchedule It Into Your Day</string>
    <string name="onboarding_3_2">(psssst, we recommend mornings so\nthat you start the day right and spread\nthe positivity around!)</string>
    <string name="onboarding_4_1">Get the Happiness\nBoost You Need</string>
    <string name="onboarding_4_2">Keep Track of Your\nMood and Get Daily\nMotivation!</string>
    <string name="overall_mood_score">Overall Mood Score</string>
    <string name="positive">positive</string>
    <string name="positivity_superstar">Positivity Superstar</string>
    <string name="reminders">Reminders</string>
    <string name="settings_title">Settings</string>
    <string name="start">START</string>
    <string name="time">Time</string>
    <string name="tips">Tips</string>
    <string name="tips_tooltip">Tips</string>
    <string name="title_activity_log_mood_screen">LogMoodScreen</string>
    <string name="title_activity_positivity_superstar_screen">PositivitySuperstarScreen</string>
    <string name="title_activity_quote_screen">QuoteScreen</string>
    <string name="title_activity_training_screen">TrainingScreen</string>
    <string name="todays_training_title">Today\'s Training</string>
    <string name="tracking_tooltip">Tracking</string>
    <string name="training">Training</string>
    <string name="training_tooltip">Training</string>
    <string name="uplifter_title">Uplifter</string>
    <string name="version">Version:\u00A0</string>
    <string name="you_are_a">You are a</string>
</resources>
