<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.uplifter.UplifterActivity"
  android:layout_height="40dp" >
  <item
    android:id="@+id/training"
    android:icon="@drawable/training"
    android:orderInCategory="1"
    android:showAsAction="always"
    android:title="@string/training_tooltip"/>
  <item
    android:id="@+id/log_your_mood"
    android:icon="@drawable/mood"
    android:orderInCategory="2"
    android:showAsAction="always"
    android:title="@string/mood_tooltip"/>
  <item
    android:id="@+id/tracking"
    android:icon="@drawable/tracking"
    android:orderInCategory="3"
    android:showAsAction="always"
    android:title="@string/tracking_tooltip"/>
  <item
    android:id="@+id/progress"
    android:icon="@drawable/history"
    android:orderInCategory="4"
    android:showAsAction="always"
    android:title="@string/history_tooltip"/>
  <item
    android:id="@+id/tips"
    android:icon="@drawable/tips"
    android:orderInCategory="5"
    android:showAsAction="always"
    android:title="@string/tips_tooltip"/>
  <item
    android:id="@+id/settings"
    android:orderInCategory="100"
    android:showAsAction="never"
    android:title="@string/settings"/>
</menu>
