<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:id="@+id/settings"
  android:background="@color/yellow"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <com.uplifter.ui.UplifterTextView android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:textSize="18sp"
    android:textColor="@color/grey"
    android:text="@string/about_title"/>
  <com.uplifter.ui.UplifterTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_marginTop="100dp"
    android:textSize="18sp"
    android:textStyle="normal"
    android:textColor="@color/white"
    android:text="@string/app_name"/>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_marginTop="35dp"
    >
    <com.uplifter.ui.UplifterTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:textStyle="normal"
      android:textColor="@color/white"
      android:text="@string/version"/>
    <com.uplifter.ui.UplifterTextView android:id="@+id/version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:textStyle="normal"
      android:textColor="@color/white"
      android:text="X.X.X"/>
  </LinearLayout>
  <com.uplifter.ui.UplifterTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_marginTop="35dp"
    android:textSize="18sp"
    android:textStyle="normal"
    android:textColor="@color/white"
    android:text="@string/copyright"/>
</LinearLayout>