<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:id="@+id/settings"
  android:background="@color/purple"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <com.uplifter.ui.UplifterTextView android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:textSize="18sp"
    android:textColor="@color/grey"
    android:text="@string/settings_title"/>
  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="115dp"
    android:layout_marginLeft="45dp"
    android:layout_marginRight="45dp"
    android:gravity="left"
    android:layout_gravity="left">
    <com.uplifter.ui.UplifterTextView android:id="@+id/onboard_notification_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="left"
      android:layout_gravity="left"
      android:layout_alignParentLeft="true"
      android:textSize="18sp"
      android:textColor="@color/white"
      android:text="@string/reminders"/>
    <com.uplifter.ui.UplifterTextView android:id="@+id/onboard_time_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="left"
      android:layout_gravity="left"
      android:layout_marginTop="15dp"
      android:layout_alignParentLeft="true"
      android:textSize="18sp"
      android:textColor="@color/white"
      android:layout_below="@id/onboard_notification_label"
      android:text="@string/time"/>
    <Switch android:id="@+id/onboard_notification_switch"
      android:onClick="switchClicked"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="right"
      android:layout_gravity="right"
      android:layout_alignParentRight="true"
      android:layout_toRightOf="@id/onboard_notification_label"/>
    <Button android:id="@+id/onboard_notification_times"
      android:onClick="showTimePickerDialog"
      android:layout_width="30dp"
      android:layout_height="wrap_content"
      android:gravity="right"
      android:layout_gravity="right"
      android:layout_marginTop="15dp"
      android:layout_alignParentRight="true"
      android:layout_below="@id/onboard_notification_switch"
      android:layout_toRightOf="@id/onboard_time_label"/>
  </RelativeLayout>
</LinearLayout>