<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  tools:context="com.uplifter.ui.MoodHistoryScreen" >
  <LinearLayout
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.uplifter.ui.UplifterTextView android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:layout_gravity="center"
      android:gravity="center"
      android:textSize="18sp"
      android:background="@color/green"
      android:textColor="@color/white"
      android:text="@string/mood_history_title"/>
    <com.uplifter.ui.UplifterTextView android:id="@+id/overall_mood_score"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:paddingTop="10dp"
      android:textSize="18sp"
      android:text="@string/overall_mood_score" />
    <com.uplifter.ui.UplifterTextView android:id="@+id/score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:textStyle="normal|italic"
      android:textSize="35sp"
      android:text="" />
    <com.uplifter.ui.PercentGraph
      android:id="@+id/percentgraph"
      android:layout_gravity="center"
      android:gravity="center"
      android:layout_width="140dp"
      android:layout_height="140dp" />
    <com.uplifter.ui.UplifterTextView android:id="@+id/positive"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:paddingTop="6dp"
      android:paddingBottom="3dp"
      android:textSize="16sp"
      android:text="" />
    <com.uplifter.ui.UplifterTextView android:id="@+id/neutral"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:paddingBottom="3dp"
      android:textSize="16sp"
      android:text="" />
    <com.uplifter.ui.UplifterTextView android:id="@+id/negative"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:textSize="16sp"
      android:text="" />
  </LinearLayout>
  <LinearLayout
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <com.uplifter.ui.UplifterTextView android:id="@+id/log_any_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:paddingBottom="15dp"
      android:textSize="16sp"
      android:text="@string/log_any_time" />
    </LinearLayout>
</RelativeLayout>
